# fluids-mcp

./: .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  FUTURE_IMPROVEMENTS_NEEDED.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  LICENSE  PUSH_INSTRUCTIONS.md  README.md  REMAINING_TASKS.md  UNITS.md  manual_push_instructions.md  pyproject.toml  requirements.txt  run_tests.bat  server-sse.py  server.py  setup.py
.codex/: AGENTS.md  config.toml  version.json
.codex/sessions/2025/09/27/: rollout-2025-09-27T21-37-12-01998df7-8209-7182-8845-0722e865101e.jsonl
.github/workflows/: tests.yml
omnitools/: __init__.py  control_valve.py  help_resources.py  machine_requirements.py  orifice_restrictor.py  parameter_sweep.py  pipe_flow.py  pipe_sizing.py  properties.py
pydraulics/: __init__.py  open_flow.py  pipe_flow.py
sessions/2025/09/27/: rollout-2025-09-27T21-35-56-01998df6-594b-7931-8843-0f5717f4766e.jsonl
tests/: __init__.py  test_fixes.py  test_fluids_mcp.py  test_integration.py  test_orifice_restrictor.py  test_sanity.py  test_tools_integration.py
tools/: __init__.py  blower_compressor.py  fluid_properties.py  gas_control_valve.py  gas_pipe_pressure_drop.py  liquid_control_valve.py  open_channel_flow.py  open_channel_flow_new.py  orifice_restrictor.py  pipe_pressure_drop.py  pipe_properties.py  pipe_sizing.py  pump_requirements.py  reynolds_number.py  reynolds_number_refactored.py
utils/: __init__.py  constants.py  fluid_aliases.py  helpers.py  import_helpers.py  input_resolver.py  json_helpers.py  property_cache.py  resolve_properties.py  vectorized_calcs.py
